Fix wp-block-images cropping images vertically.

--- a/wp-content/themes/ergot/sass/components/_block-image.scss
+++ b/wp-content/themes/ergot/sass/components/_block-image.scss
@@ -3,6 +3,7 @@
   @include shadow;
   
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   margin-right: auto;
